--- a/miniapp/pages/history/index.scss
+++ b/miniapp/pages/history/index.scss
@@ -9,6 +9,7 @@
 .history-scroll {
   flex: 1;
   min-height: 0;
+  background-color: var(--bg);
 }
 
 .history-content {
