--- a/miniapp/pages/settings/index.scss
+++ b/miniapp/pages/settings/index.scss
@@ -7,6 +7,7 @@
 .settings-scroll {
   flex: 1;
   min-height: 0;
+  background-color: var(--bg);
 }
 
 .settings-content {
